--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nuxt/typescript-build": "^2.1.0",
     "@nuxtjs/eslint-config-typescript": "^6.0.1",
     "@nuxtjs/eslint-module": "^3.0.2",
+    "@nuxtjs/style-resources": "^1.2.1",
     "@nuxtjs/tailwindcss": "^4.2.0",
     "@vue/test-utils": "^1.2.1",
     "babel-core": "7.0.0-bridge.0",
@@ -34,10 +35,14 @@
     "eslint": "^7.29.0",
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-vue": "^7.12.1",
+    "fibers": "^5.0.0",
     "husky": "^6.0.0",
     "jest": "^27.0.5",
     "lint-staged": "^10.5.4",
+    "node-sass": "^6.0.1",
     "postcss": "^8.3.5",
+    "sass": "^1.42.1",
+    "sass-loader": "^10.2.0",
     "ts-jest": "^27.0.3",
     "vue-jest": "^3.0.4"
   }
