--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@nuxtjs/pwa": "^3.3.5",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
-    "nuxt-svg-loader": "^1.2.0"
+    "nuxt-svg-loader": "^1.2.0",
+    "vue2-google-maps": "^0.10.7"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
